# kefu

./: .codex  .dockerignore  .env.example  .gitattributes  .gitignore  README.md  WINDOWS_DEVELOPMENT_QUICKSTART.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_accounts_api.py  test_ai_rpa_closed_loop_research.py  test_auth_rbac_audit.py  test_bailian_chat_quality_eval_script.py  test_bailian_chat_smoke_script.py  test_channel_connectors_api.py  test_channel_webhooks_api.py  test_conversation_inbox_api.py  test_customer_profiles_api.py  test_customer_service_eval_bank_import_script.py  test_customer_service_eval_report_export_script.py  test_delivery_failure_reviews_api.py  test_diagnostics_api.py  test_foundation_api.py  test_health_contract.py  test_knowledge_api.py  test_knowledge_documents_api.py  test_knowledge_embedding_provider_smoke_api.py  test_knowledge_evaluations_api.py  test_knowledge_gaps_api.py  test_knowledge_update_packages_api.py  test_knowledge_vector_index_api.py  test_knowledge_vector_index_strategy_api.py  test_llm_ops_readiness_api.py  test_local_backups_api.py  test_local_maintenance_readiness_api.py  test_local_setup_api.py  test_model_routing_policy.py  test_mvp_customer_service_workflow_api.py  test_outbox_api.py  test_outbox_delivery_queue_api.py  test_p2_24_synthetic_eval_smoke_script.py  test_p2_25_chunk_backfill_eval_comparison_script.py  test_p2_26_retrieval_quality_comparison_script.py  test_p3_02_factuality_rehearsal_script.py  (+47 more)
(+836 files in other folders)
