[project]
name = "wanfa-standard-ops-backend"
version = "0.1.0"
description = "Wanfa AI customer service standard operations backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "python-multipart>=0.0.9",
  "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]
embedding = [
  "FlagEmbedding>=1.2.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
